--- a/css/global.css
+++ b/css/global.css
@@ -46,7 +46,7 @@
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-  font-family: "Inter";
+  font-family: "Inter", sans-serif;
   text-decoration: none;
 }
 
