--- a/css/add_task/add_task.css
+++ b/css/add_task/add_task.css
@@ -96,7 +96,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .at-dropdown {
   position: relative;
-  background: #e1e0e0;
+  background: #2a36471e;
   border-radius: 10px;
   max-height: 0;
   opacity: 0;
@@ -114,10 +114,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   margin-bottom: 8px;
   font-size: 22px;
   transition: all 300ms ease-in-out;
-}
-
-.at-label-style.shrink-font-size {
-  font-size: 16px;
 }
 
 .required {
@@ -212,7 +208,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   width: 130px;
   cursor: pointer;
   border-radius: 10px;
-  box-shadow: 0 0px 10px var(--placeholder-color);
+  box-shadow: 0 0px 14px #2a364739;
   transition: all 300ms ease-in-out;
 }
 
@@ -230,7 +226,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .category-dropdown {
   position: relative;
-  background: #e1e0e0;
+  background: #2a36471e;
   border-radius: 10px;
   max-height: 0;
   opacity: 0;
