--- a/css/board/board_card_info.css
+++ b/css/board/board_card_info.css
@@ -30,7 +30,7 @@
   overflow-x: auto;
 }
 .card-info-section {
-  padding: 40px;
+  padding: 40px 24px 40px 24px;
   transform: translateY(200%);
 }
 .card-info-section.card-visible {
@@ -191,6 +191,7 @@
     background: white;
     width: 100%;
     max-height: calc(100vh - 64px);
+    max-width: 525px;
   }
   .board-info-title span {
     font-size: 48px;
@@ -243,9 +244,6 @@
   }
 }
 @media (min-width: 857px) {
-  .card-info-section {
-    margin-inline: 16px;
-  }
   .board-info-big-size {
     max-width: 47vw;
   }
@@ -265,7 +263,6 @@
   .card-info-section {
     transform: translateY(0);
     transform: translateX(150%);
-    max-width: calc(100vw - 232px - 128px);
   }
   .board-info-title span {
     font-size: 61px;
@@ -300,6 +297,8 @@
     background: white;
     width: 100%;
     max-height: calc(100vh - 64px);
+    max-width: 396px;
+    padding: 24px;
   }
   .board-info-title span {
     font-size: 36px;
@@ -331,6 +330,14 @@
   }
   .close-board-info-at:active svg path {
     fill: white;
+  }
+  .board-content-container {
+    box-shadow: none;
+    border-radius: 0;
+    margin-top: 0px;
+  }
+  .board-info-menu-container {
+    margin-top: 0;
   }
 }
 @media (max-width: 607px) {
@@ -365,31 +372,27 @@
     max-width: 45vw;
   }
 }
+@media (min-width: 761px) and (max-height: 800px) {
+  .board-content-container {
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
 
 @media (min-width: 761px) and (max-height: 700px) {
-  .card-info-wrapper {
-    display: block;
-    margin-bottom: 0;
-  }
-  .card-info-section {
-    height: 100vh;
-    width: 100%;
-    margin: 0;
-    border-radius: 0;
-    max-height: 100vh;
-  }
   .board-content-container {
-    max-height: calc(100vh - 200px);
+    max-height: calc(100vh - 260px);
     margin-top: 42px;
   }
 }
 @media (min-width: 761px) and (max-height: 500px) {
   .card-info-section {
     padding: 24px;
+    max-width: none;
   }
   .board-content-container {
     box-shadow: none;
-    max-height: calc(100vh - 160px);
+    max-height: calc(100vh - 210px);
     margin-top: 16px;
   }
   .board-info-title span {
@@ -405,33 +408,21 @@
     top: 33px;
   }
 }
-
-@media (min-width: 1341px) and (max-height: 700px) {
-  .card-info-wrapper {
-    display: flex;
-    margin-bottom: 0;
-  }
+@media (min-width: 980px) and (max-height: 700px) {
   .card-info-section {
-    height: calc(100vh - 96px);
     margin-inline: 64px;
     border-radius: 20px;
-  }
-  .board-content-container {
-    height: calc(100vh - 260px);
-    margin-top: 16px;
-    box-shadow: none;
-    max-height: none;
+    max-width: 600px;
   }
 }
 @media (min-width: 1341px) and (max-height: 500px) {
-  .card-info-wrapper {
-    display: block;
-  }
   .card-info-section {
+    max-height: none;
     height: 100vh;
   }
   .board-content-container {
     height: calc(100vh - 150px);
+    max-height: none;
   }
 }
 
@@ -446,33 +437,12 @@
     padding: 0;
     border-radius: 0px;
   }
+  .board-info-category {
+    margin-left: 0;
+  }
 }
 
-/* @media (max-width: 760px) and (max-height: 700px) {
-  .card-info-wrapper {
-    display: block;
-    margin-bottom: 0;
-  }
-  .card-info-section {
-    height: 100vh;
-    width: 100%;
-    margin: 0;
-    border-radius: 0;
-    max-height: 100vh;
-  }
-  .board-content-container {
-    max-height: calc(100vh - 200px);
-    margin-top: 24px;
-    padding: 0;
-    border-radius: 0px;
-  }
-} */
 @media (max-width: 760px) and (max-height: 500px) {
-  .card-info-wrapper {
-    display: block;
-    margin-bottom: 0;
-    margin-top: 0;
-  }
   .card-info-section {
     height: 100vh;
     width: 100%;
@@ -480,6 +450,7 @@
     border-radius: 0;
     max-height: 100vh;
     padding: 24px;
+    max-width: none;
   }
   .board-content-container {
     box-shadow: none;
