--- a/css/contacts/add_contacts.css
+++ b/css/contacts/add_contacts.css
@@ -258,7 +258,7 @@
   right: 16px;
   padding-inline: 8px;
   border-bottom-left-radius: 20px;
-  box-shadow: -4px 6px 6px 0px #00000040;
+  box-shadow: -4px 6px 6px 0px #2a364739;
   z-index: 998;
   transform: translateX(150%);
   transition: all 300ms ease-in-out;
@@ -310,7 +310,7 @@
   .ec-btn-fill:hover {
     background: var(--mockup-highlight);
     border: 2px solid var(--mockup-highlight);
-    box-shadow: 0 6px 5px rgba(0, 0, 0, 0.18);
+    box-shadow: 0 6px 5px #2a364739;
   }
   .ac-circle:hover,
   .ec-circle:hover {
@@ -320,7 +320,7 @@
   .ac-btn-white:hover,
   .ec-btn-white:hover {
     border: 2px solid var(--mockup-highlight);
-    box-shadow: 0 6px 5px rgba(0, 0, 0, 0.18);
+    box-shadow: 0 6px 5px #2a364739;
     color: var(--mockup-highlight);
   }
   .ac-btn-white:hover svg path {
