--- a/css/add_task/add_task_media.css
+++ b/css/add_task/add_task_media.css
@@ -30,7 +30,7 @@
     gap: 16px;
   }
   .at-prio-img img:hover {
-    transform: translate3d(0, -3px, 0);
+    transform: scale(1.05);
   }
 
   .assigned-to-box.selected-contact-at:hover,
@@ -151,7 +151,7 @@
 @media (max-width: 824px) {
   .required-msg {
     font-size: 16px;
-    transition: all 300ms ease-in-out;
+    transition: all 200ms ease-in-out;
   }
   .rotate-err-arrow {
     width: 14px;
