--- a/css/board/board.css
+++ b/css/board/board.css
@@ -1,17 +1,14 @@
 .board-at-btn span {
   display: none;
 }
-/* .board-wrapper,
-.board-content-wrapper {
-  transition: all 300ms ease-out;
-} */
 .board-headline {
   display: flex;
+  max-width: 1440px;
   justify-content: space-between;
   align-items: center;
 }
 .board-headline h1 {
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 .search-at-container {
   display: flex;
@@ -36,7 +33,7 @@
 .board-headline-right {
   display: flex;
   align-items: center;
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .board-search-desktop svg,
@@ -60,7 +57,7 @@
   margin-top: 24px;
   max-width: 100vw;
   min-width: 200px;
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .board-header {
@@ -72,7 +69,7 @@
 .drop-area {
   min-height: 80px;
   max-width: 100vw;
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .drag-area-hover,
@@ -99,7 +96,7 @@
   justify-content: start;
   align-items: center;
   overflow-x: auto;
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .noTaskMsg {
@@ -122,7 +119,7 @@
 .board-box h2 {
   color: var(--mockup-color);
   font-weight: 700;
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .magnifier-container {
