--- a/css/board/board_add_task_overlay.css
+++ b/css/board/board_add_task_overlay.css
@@ -11,11 +11,11 @@
   padding: 0px 16px 0px 16px;
   overflow-y: auto;
   transform: translateY(100%);
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 .content-container-board {
   overflow-y: auto;
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .board-at-section.card-visible {
@@ -32,10 +32,10 @@
   width: 32px;
   border-radius: 50%;
   cursor: pointer;
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 .board-at-headline {
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 .close-board-at svg path,
 .close-edit-at svg path {
@@ -53,7 +53,7 @@
   right: 0;
   bottom: 0;
   height: 85px;
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
   z-index: 101;
 }
 
@@ -103,23 +103,36 @@
     align-items: center;
   }
   .at-prio-img {
-    padding-inline: 8px !important;
+    justify-content: center !important;
+    gap: 16px !important;
   }
 }
 
 @media (min-width: 1341px) {
+  .at-prio-img {
+    justify-content: center !important;
+    gap: 16px !important;
+  }
   .vertical-bar-container {
     display: none !important;
   }
-  .at-prio-img {
-    padding-inline: 0px !important;
-  }
   .board-at-section {
     transform: translateY(0);
-    transform: translateX(200%);
+    transform: translateX(250%);
+  }
+  .board-at-wrapper {
+    max-width: 1920px;
   }
 }
-
+@media (min-width: 2500px) {
+  .board-at-section {
+    transform: translateY(250%);
+  }
+  .board-at-section .card-visible {
+    transform: translatex(0);
+    transform: translateY(0);
+  }
+}
 @media (max-width: 760px) {
   .content-container-board {
     max-height: calc(100vh - 250px);
