--- a/css/board/board_card_info.css
+++ b/css/board/board_card_info.css
@@ -19,7 +19,7 @@
 .card-info-wrapper,
 .card-info-section,
 .board-content-container {
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 .board-info-big-size {
   width: 100%;
@@ -163,7 +163,7 @@
   width: 32px;
   border-radius: 50%;
   cursor: pointer;
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 .close-board-info-at svg path {
   fill: var(--mockup-color);
@@ -262,13 +262,21 @@
   }
   .card-info-section {
     transform: translateY(0);
-    transform: translateX(150%);
+    transform: translateX(250%);
   }
   .board-info-title span {
     font-size: 61px;
   }
 }
-
+@media (min-width: 2500px) {
+  .card-info-section {
+    transform: translateY(250%);
+  }
+  .card-info-section.card-visible {
+    transform: translatex(0);
+    transform: translateY(0);
+  }
+}
 @media (max-width: 760px) {
   .close-board-info-at {
     right: 48px;
