--- a/css/contacts/contacts.css
+++ b/css/contacts/contacts.css
@@ -24,7 +24,7 @@
   position: relative;
   font-size: 20px;
   width: 100%;
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .letter-style::after {
@@ -51,7 +51,7 @@
   cursor: pointer;
   border-radius: 10px;
   margin: 2px 0 1px 0;
-  transition: background-color 300ms ease-in-out;
+  transition: background-color 200ms ease-in-out;
 }
 
 .contact-style.selected-contact {
@@ -65,7 +65,7 @@
   -moz-appearance: none;
   appearance: none;
   width: 40px;
-  height: 40px;
+  height: 42px;
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -88,8 +88,9 @@
   width: 46px;
   height: 46px;
   min-width: 46px;
-  border: 2px solid white;
-  transition: all 300ms ease-in-out;
+  outline: 4px #fff solid;
+  box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.125);
+  transition: all 200ms ease-in-out;
 }
 
 .contact-content {
@@ -100,7 +101,7 @@
   word-wrap: break-word;
   overflow-x: auto;
   width: 100%;
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .contact-content span:last-child {
