--- a/css/global.css
+++ b/css/global.css
@@ -80,7 +80,7 @@ a {
   border-radius: 20px;
   border: 6px solid transparent;
   background-clip: content-box;
-  transition: background-color 0.3s ease-in-out;
+  transition: background-color 200ms ease-in-out;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -138,7 +138,7 @@ input:-webkit-autofill:active {
   align-items: center;
   cursor: pointer;
   margin-right: 4px;
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .tooltip svg {
@@ -185,7 +185,7 @@ input:-webkit-autofill:active {
   border-radius: 20px;
   z-index: 1000;
   transform: translate(-50%, 700%);
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .trans-bg {
@@ -222,7 +222,7 @@ input:-webkit-autofill:active {
   height: 45px;
   cursor: pointer;
   font-weight: 700;
-  transition: all 300ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .filled-btn {
@@ -329,7 +329,7 @@ input {
 input::placeholder,
 textarea::placeholder {
   color: var(--placeholder-color);
-  transition: font-size 300ms ease-in-out;
+  transition: font-size 200ms ease-in-out;
 }
 
 .input_global:focus-within {
@@ -425,7 +425,7 @@ textarea::placeholder {
 @media (max-width: 438px) {
   .error-page span {
     font-size: 26px;
-    transition: all 300ms ease-in-out;
+    transition: all 200ms ease-in-out;
   }
 }
 
