--- a/css/board/board_card.css
+++ b/css/board/board_card.css
@@ -266,15 +266,17 @@
     font-size: 32px;
   }
   .move-to-headline {
-    padding: 12.5px;
+    padding: 6px;
     background-color: var(--white-grey);
     display: flex;
     justify-content: space-between;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
   }
   .move-to-button2 {
     position: absolute;
     right: 0;
-    top: 8px;
+    top: 1px;
     height: 8px;
     width: auto;
     border: none;
@@ -286,7 +288,7 @@
     flex-direction: column;
     position: absolute;
     top: 0px;
-    right: 0px;
+    right: 24px;
   }
   .move-to-menu ul {
     flex: 1 1 0;
@@ -301,7 +303,7 @@
     color: white;
   }
   .move-to-menu ul li {
-    padding: 10.5px;
+    padding: 8px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
   }
