--- a/css/summary/summary.css
+++ b/css/summary/summary.css
@@ -267,3 +267,9 @@
     background-color: var(--err-msg-color);
   }
 }
+@media (min-width: 1341px) {
+  .tooltip-summary .summary-tooltiptext {
+    border-radius: 20px 20px 20px 0px;
+    right: -200px;
+  }
+}
