--- a/css/board/board_card.css
+++ b/css/board/board_card.css
@@ -49,27 +49,32 @@
   color: #a8a8a8;
   word-wrap: break-word;
 }
+
 .subtasks-block,
 .priority-block {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .subtasks-block {
   gap: 11px;
   font-size: 12px;
   color: black;
 }
+
 .progress {
   height: 100%;
   background-color: #4589ff;
 }
+
 .board-added-contacts {
   position: relative;
   display: flex;
   margin-left: 8px;
   z-index: 0;
 }
+
 .board-assignedTo-prio {
   display: flex;
   align-items: center;
@@ -84,6 +89,7 @@
   overflow: hidden;
   flex: 1;
 }
+
 .board-circle-style {
   display: flex;
   justify-content: center;
@@ -216,6 +222,7 @@
 }
 
 .move-to-button {
+  cursor: pointer;
   display: none;
 }
 
@@ -230,24 +237,11 @@
   .board-card {
     padding: 16px;
   }
-  .move-to-button {
-    display: none;
-  }
-  .move-to-headline {
-    display: none;
-  }
-  .move-to-button2 {
-   display: none;
-  }
   .move-to-menu {
     display: none;
   }
-  .move-to-menu ul {
-    display: none;
-  }
-  .move-to-menu ul li {
-    display: none;}
 }
+
 @media (min-width: 1341px) {
   .task-container,
   .priority-block {
@@ -260,6 +254,7 @@
     padding: 16px;
   }
 }
+
 @media (max-width: 760px) {
   .task-container,
   .priority-block {
@@ -291,6 +286,7 @@
     border-top-right-radius: 10px;
   }
   .move-to-button2 {
+    cursor: pointer;
     position: absolute;
     right: 0;
     top: 1px;
@@ -320,6 +316,7 @@
     color: white;
   }
   .move-to-menu ul li {
+    cursor: pointer;
     padding: 8px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
